@@ -1,3 +1,9 @@
 Changes in version 0.2 -----------------------------------------------------------------
 
-* visible results are automatically evaluated and their visible results are capture.  This is particularly important for lattice and ggplot graphics, which otherwise require special handling.  It also correctly captures warnings, errors and messages raised by the print method.
+* try_capture_stack and create_traceback do a much better job of removing
+  infrastructure calls from the captured traceback
+
+* visible results are automatically evaluated and their outputs are captured.
+  This is particularly important for lattice and ggplot graphics, which
+  otherwise require special handling. It also correctly captures warnings,
+  errors and messages raised by the print method.
